--- a/.env.local.example
+++ b/.env.local.example
@@ -3,6 +3,16 @@ NEXT_PUBLIC_SUPABASE_URL=https://pkztpifakjqziabhhrux.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
 
+# Admin Site URL — REQUIRED for OAuth & Magic Link to redirect back here
+# instead of the client site (marketview360.io).
+# Set this to your admin portal's URL (e.g. http://localhost:3000 for local dev).
+#
+# IMPORTANT: You must ALSO add this URL to Supabase Dashboard →
+#   Authentication → URL Configuration → Redirect URLs
+# Otherwise Supabase will redirect OAuth/magic-link back to the Site URL
+# (which is set to the client app marketview360.io).
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
+
 # Backend API
 NEXT_PUBLIC_API_URL=http://localhost:3001
 
