--- a/.env.local.example
+++ b/.env.local.example
@@ -6,6 +6,9 @@ SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
 # Backend API
 NEXT_PUBLIC_API_URL=http://localhost:3001
 
+# Genesis Ingestion Service (Go)
+NEXT_PUBLIC_GENESIS_URL=http://localhost:4000
+
 # Admin — comma-separated list of emails allowed to access the admin dashboard.
 # The user must exist in Supabase Auth (created via Dashboard → Authentication → Users).
 # Login is email + password only.
