--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.95.3",
+    "@uiw/react-md-editor": "^4.0.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "easymde": "^2.20.0",
     "emoji-picker-react": "^4.18.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
@@ -23,7 +23,6 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-markdown": "^10.1.0",
-    "react-simplemde-editor": "^5.2.0",
     "recharts": "^3.7.0",
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.1",
